--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,12 @@
 body{
   font-family: "Montserrat";
+  font-weight: 700;
+}
+
+a{
+  text-decoration: none;
+  color:black;
+  background-color: trasparent;
 }
 
 #navbar_freelancer a{
@@ -38,6 +45,9 @@ body{
   width:100%;
 }
 
+#navbar_freelancer li>a:hover{
+  color:#1abc9c;
+}
 
 .divider-control {
   text-align: center;
@@ -61,13 +71,22 @@ body{
   display: inline-block;
 }
 
+
+
 @media screen and (min-width: 768px){
   .navbar-title{
     font-size: 2.9rem;
+    font-weight: 700;
   }
-  .portfolio-title{
+  .title-section{
     font-size: 4.5rem;
+    font-weight: 700;
   }
+  .title-jumbotron{
+      font-size: 4.5rem;
+      font-weight: 700;
+  }
+
 }
 
 .bg-color-1{
@@ -86,4 +105,40 @@ body{
 
 .txt-color-2{
   color: #1abc9c;
+}
+
+.img-portfolio{
+  width:100%;
+    border-radius: 13px;
+}
+
+.mb-5{
+  margin-bottom:3rem;
+}
+
+.txt-about{
+  font-size:1.8rem;
+  font-weight: 300;
+}
+
+#about{
+  padding:8rem 0;
+}
+
+
+.btn-xl{
+  font-size:20px;
+  padding:1.5rem;
+}
+
+.btn-outline-light{
+  background: transparent;
+  border: 2px solid white;
+  border-radius: 12px;
+  color:white;
+}
+
+.btn-outline-light:hover{
+  background: white;
+  color:black;
 }
